# MedTech_AIMinds

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  QUICKSTART.py  README.md  VIDEO_SEARCH_FEASIBILITY.md  _debug_db.py  debug_browser_ingest.py  debug_one_record.py  demo_embeddings.py  ingest_all_data.py  inspect_browser_lengths.py  inspect_browser_schema.py  main.py  pyproject.toml  requirements.txt  start_concierge.bat  test_embeddings.py  test_query_against_store.py  test_storage_with_browser.py  test_video_audio_simple.py  test_video_search.py  video_search_demo.html  video_search_working.html
API/: __init__.py  chat_interface.py
Core/: __init__.py  audio_processor.py  document_processor.py  embeddings.py  image_processor.py  rag_engine.py  text_processor.py  video_processor.py
Data Layer/Data Collection/Browser/: browser_ingestion.py
Data_Layer/: storage_manager.py
Data_Layer/Data_Collection/: __init__.py
Data_Layer/Data_Collection/Browser/: browser_ingestion.py  template_ingestion.py  test_browser_ingestion.py
Data_Layer/Data_Collection/Calendar/: calendar_watcher.py
Data_Layer/Data_Collection/Clipboard/: clipboard_watcher.py
Data_Layer/Data_Collection/Clipboard_Concierge/: action_executor.py  llm_concierge_v2.py  start_realtime.py
Data_Layer/Data_Collection/Email/: .gitignore  README.md  email_watcher.py
Data_Layer/Data_Collection/File_System/: activity_monitor.py
Data_Layer/Data_Collection/Screenshots/: screenshot_watcher.py
Data_Layer/Data_Storage/: File_System.json  browser_data_2026_01.json  browser_data_2026_02.json
Tests/: __init__.py  test_storage.py
